FIX some misa aligned css

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,97 +1,100 @@
-.contactFullDiv{
+.contactFullDiv {
   display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 90vh
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 90vh;
 }
 
-.contactWrapper{
+.contactWrapper {
   width: 40%;
   padding: 2rem;
 }
 
-.contactHeading{
+.contactHeading {
   padding: 1rem;
 }
 
-.contact{
-    font-family: 'Playfair Display', serif;
-    text-align: center;
-    font-size:50px
-  }
+.contact {
+  font-family: 'Playfair Display', serif;
+  text-align: center;
+  font-size: 50px;
+}
 
-.submit{
+.submit {
   padding: 0.5rem 2rem;
   width: fit-content;
   border-radius: 50px;
   margin: auto;
   transition: 0.2s ease-in-out;
   color: #101010;
-} 
+}
 
-.submit:hover{
+.submit:hover {
   transform: scale(0.9);
   cursor: pointer;
 }
 
-.socialIconDiv{
+.socialIconDiv {
   width: 60%;
   display: flex;
   justify-content: space-evenly;
   margin: 1.5rem auto;
 }
 
-.socialIcon{
+.socialIcon {
   height: 45px;
   width: 45px;
   padding: 0.75rem;
   border-radius: 50%;
   cursor: pointer;
   transition: 0.2s ease-in-out;
+  display: flex;
+  justify-content: center; /* center horizontally */
+  align-items: center;
 }
 
-.socialIcon:hover{
-  transform: scale(0.9)
+.socialIcon:hover {
+  transform: scale(0.9);
 }
 
-.form{
+.form {
   padding: 1rem;
   border-radius: 20px;
   border-width: 2px;
   margin: 1rem 0;
 }
 
-@media only screen and (max-width: 850px){
-  .contactWrapper{
+@media only screen and (max-width: 850px) {
+  .contactWrapper {
     width: 80%;
     padding: 1rem;
   }
 
-  .socialIconDiv{
+  .socialIconDiv {
     width: 70%;
   }
 
-  .socialIcon{
+  .socialIcon {
     height: 35px;
     width: 35px;
     padding: 0.5rem;
     border-radius: 50%;
   }
-  
-  .form{
+
+  .form {
     padding: 1rem;
     border-radius: 15px;
     border-width: 1.5px;
   }
 }
 
-@media only screen and (max-width: 500px){
-  .contactWrapper{
+@media only screen and (max-width: 500px) {
+  .contactWrapper {
     width: 90%;
   }
 
-  .contact{
-    font-size:40px
+  .contact {
+    font-size: 40px;
   }
 }
